--- a/app/src/main/res/layout/activity_taches_controller.xml
+++ b/app/src/main/res/layout/activity_taches_controller.xml
@@ -8,49 +8,53 @@
 
     <Button
         android:id="@+id/button_accéder_list_taches"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="252dp"
-        android:layout_marginBottom="172dp"
+        android:layout_width="258dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="71dp"
         android:text="Accéder à la liste des tâches"
-        app:layout_constraintBottom_toTopOf="@+id/imageview_supp_in_tache"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/button_acceder_nouvelle_taches" />
 
     <Button
         android:id="@+id/button_acceder_nouvelle_taches"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_width="258dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="67dp"
         android:text="ajouter une nouvelle taches"
+        app:layout_constraintBottom_toTopOf="@+id/button_accéder_list_taches"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_accéder_list_taches" />
-
-    <ImageView
-        android:id="@+id/imageview_supp_in_tache"
-        android:layout_width="166dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="105dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        app:srcCompat="@drawable/_200px_octagon_delete_svg" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="226dp"
+        android:layout_width="210dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="208dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageview_supp_in_tache"
+        android:layout_marginTop="27dp"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_acceder_nouvelle_taches"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/circle_icons_folder_svg" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_accéder_list_taches">
+
+        <ImageView
+            android:id="@+id/imageview_supp_in_tache"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/_200px_octagon_delete_svg" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
